graphs folder reformat

--- a/fourier.ipynb
+++ b/fourier.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import scipy as sp\n"
+    "import scipy as sp"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "def sin(x):\n",
-    "    return np.sin(x)\n"
+    "    return np.sin(x)"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdata = np.linspace(0,20, 200)\n",
+    "xdata = np.linspace(0, 20, 200)\n",
     "ydata = sin(xdata)"
    ]
   },
@@ -58,8 +58,8 @@
     }
    ],
    "source": [
-    "#SIMPLE FUNCTION 1\n",
-    "plt.plot(xdata,ydata)\n",
+    "# SIMPLE FUNCTION 1\n",
+    "plt.plot(xdata, ydata)\n",
     "plt.show()"
    ]
   },
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ydata2 = np.sin(2*xdata)"
+    "ydata2 = np.sin(2 * xdata)"
    ]
   },
   {
@@ -91,10 +91,10 @@
     }
    ],
    "source": [
-    "#SIMPLE FUNCTION 2\n",
+    "# SIMPLE FUNCTION 2\n",
     "\n",
     "\n",
-    "plt.plot(xdata,ydata2)\n",
+    "plt.plot(xdata, ydata2)\n",
     "plt.show()"
    ]
   },
@@ -119,7 +119,7 @@
    "source": [
     "# MIXED FUNCTION\n",
     "\n",
-    "plt.plot(xdata,(ydata+ydata2)/2)\n",
+    "plt.plot(xdata, (ydata + ydata2) / 2)\n",
     "plt.show()"
    ]
   },
@@ -131,7 +131,7 @@
    "source": [
     "from scipy import fftpack\n",
     "\n",
-    "weird_one = (ydata+ydata2)/2"
+    "weird_one = (ydata + ydata2) / 2"
    ]
   },
   {
@@ -165,8 +165,7 @@
     }
    ],
    "source": [
-    "\n",
-    "fig = plt.figure(figsize=(20,20))\n",
+    "fig = plt.figure(figsize=(20, 20))\n",
     "\n",
     "# apply fourier analysis\n",
     "fourier = fftpack.fft(ydata)\n",
@@ -192,10 +191,12 @@
     "freqs = fftpack.fftfreq(len(weird_one))\n",
     "\n",
     "plt.show()\n",
-    "fig = plt.figure(figsize=(20,20))\n",
+    "fig = plt.figure(figsize=(20, 20))\n",
     "\n",
-    "plt.plot(freqs, fourier.real, c='green')\n",
-    "plt.title(\"Analysis of the mixed function. Note that it finds exactly the same peaks as the figure above (but with half the magnitude)\")\n",
+    "plt.plot(freqs, fourier.real, c=\"green\")\n",
+    "plt.title(\n",
+    "    \"Analysis of the mixed function. Note that it finds exactly the same peaks as the figure above (but with half the magnitude)\"\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -230,7 +231,7 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(20,20))\n",
+    "fig = plt.figure(figsize=(20, 20))\n",
     "\n",
     "# fourier analysis + get frequencies\n",
     "fourier = fftpack.fft(ydata)\n",
@@ -245,7 +246,9 @@
     "\n",
     "# plot only indices of positive frequencies\n",
     "plt.plot(freqs[i_min:i_max], np.abs(np.real(fourier))[i_min:i_max])\n",
-    "plt.title(\"Fourier analysis for the simple functions. Only the positive frequencies plotted.\")\n",
+    "plt.title(\n",
+    "    \"Fourier analysis for the simple functions. Only the positive frequencies plotted.\"\n",
+    ")\n",
     "\n",
     "fourier = fftpack.fft(ydata2)\n",
     "freqs = fftpack.fftfreq(len(ydata2))\n",
@@ -263,7 +266,7 @@
     "fourier = fftpack.fft(weird_one)\n",
     "freqs = fftpack.fftfreq(len(weird_one))\n",
     "plt.show()\n",
-    "fig = plt.figure(figsize=(20,20))\n",
+    "fig = plt.figure(figsize=(20, 20))\n",
     "\n",
     "# sort frequencies & fourier together\n",
     "freqs, fourier = zip(*sorted(zip(freqs, fourier)))\n",
@@ -272,7 +275,7 @@
     "i_max = freqs.index(0.4)\n",
     "\n",
     "# plot only indices of positive frequencies\n",
-    "plt.plot(freqs[i_min:i_max], np.abs(np.real(fourier))[i_min:i_max], c='green')\n",
+    "plt.plot(freqs[i_min:i_max], np.abs(np.real(fourier))[i_min:i_max], c=\"green\")\n",
     "plt.title(\"Positive frequencies of the mixed function\")\n",
     "plt.show()"
    ]
