--- a/oscillation_example.ipynb
+++ b/oscillation_example.ipynb
@@ -21,45 +21,47 @@
     "import numpy as np\n",
     "import pylab as pl\n",
     "\n",
-    "mu=1/(70*365.0)\n",
-    "beta=520/365.0\n",
-    "gamma=1/7.0\n",
-    "TS=1.0\n",
-    "ND=60*365\n",
-    "S0=0.1\n",
-    "I0=1e-4\n",
-    "R0=1-S0-I0\n",
+    "mu = 1 / (70 * 365.0)\n",
+    "beta = 520 / 365.0\n",
+    "gamma = 1 / 7.0\n",
+    "TS = 1.0\n",
+    "ND = 60 * 365\n",
+    "S0 = 0.1\n",
+    "I0 = 1e-4\n",
+    "R0 = 1 - S0 - I0\n",
     "INPUT = (S0, I0, R0)\n",
     "\n",
-    "def diff_eqs(INP,t):  \n",
-    "\t'''The main set of equations'''\n",
-    "\tY=np.zeros((3))\n",
-    "\tV = INP    \n",
-    "\tY[0] = mu - beta * V[0] * V[1] - mu * V[0]\n",
-    "\tY[1] = beta * V[0] * V[1] - gamma * V[1] - mu * V[1]\n",
-    "\tY[2] = gamma * V[1] - mu * V[2]\n",
-    "\treturn Y   # For odeint\n",
+    "\n",
+    "def diff_eqs(INP, t):\n",
+    "    \"\"\"The main set of equations\"\"\"\n",
+    "    Y = np.zeros((3))\n",
+    "    V = INP\n",
+    "    Y[0] = mu - beta * V[0] * V[1] - mu * V[0]\n",
+    "    Y[1] = beta * V[0] * V[1] - gamma * V[1] - mu * V[1]\n",
+    "    Y[2] = gamma * V[1] - mu * V[2]\n",
+    "    return Y  # For odeint\n",
     "\n",
     "\n",
+    "t_start = 0.0\n",
+    "t_end = ND\n",
+    "t_inc = TS\n",
+    "t_range = np.arange(t_start, t_end + t_inc, t_inc)\n",
+    "RES = spi.odeint(diff_eqs, INPUT, t_range)\n",
     "\n",
-    "t_start = 0.0; t_end = ND; t_inc = TS\n",
-    "t_range = np.arange(t_start, t_end+t_inc, t_inc)\n",
-    "RES = spi.odeint(diff_eqs,INPUT,t_range)\n",
-    "\n",
-    "#Ploting\n",
+    "# Ploting\n",
     "pl.subplot(311)\n",
-    "pl.plot(RES[:,0], '-g', label='Susceptibles')\n",
-    "pl.title('Damped Oscillator Example')\n",
-    "pl.xlabel('Time')\n",
-    "pl.ylabel('Susceptibles')\n",
+    "pl.plot(RES[:, 0], \"-g\", label=\"Susceptibles\")\n",
+    "pl.title(\"Damped Oscillator Example\")\n",
+    "pl.xlabel(\"Time\")\n",
+    "pl.ylabel(\"Susceptibles\")\n",
     "pl.subplot(312)\n",
-    "pl.plot(RES[:,1], '-r', label='Infectious')\n",
-    "pl.xlabel('Time')\n",
-    "pl.ylabel('Infectious')\n",
+    "pl.plot(RES[:, 1], \"-r\", label=\"Infectious\")\n",
+    "pl.xlabel(\"Time\")\n",
+    "pl.ylabel(\"Infectious\")\n",
     "pl.subplot(313)\n",
-    "pl.plot(RES[:,2], '-k', label='Recovereds')\n",
-    "pl.xlabel('Time')\n",
-    "pl.ylabel('Recovereds')\n",
+    "pl.plot(RES[:, 2], \"-k\", label=\"Recovereds\")\n",
+    "pl.xlabel(\"Time\")\n",
+    "pl.ylabel(\"Recovereds\")\n",
     "pl.show()"
    ]
   },
@@ -102,49 +104,51 @@
     "import numpy as np\n",
     "import pylab as pl\n",
     "\n",
-    "rho=0.5\n",
-    "nu=mu=1/(70*365.0)\n",
-    "beta=520/365.0\n",
-    "gamma=1/7.0\n",
-    "TS=1.0\n",
-    "ND=1e6\n",
-    "N0=1\n",
-    "X0=0.2\n",
-    "Y0=1e-4\n",
-    "Z0=N0-X0-Y0\n",
+    "rho = 0.5\n",
+    "nu = mu = 1 / (70 * 365.0)\n",
+    "beta = 520 / 365.0\n",
+    "gamma = 1 / 7.0\n",
+    "TS = 1.0\n",
+    "ND = 1e6\n",
+    "N0 = 1\n",
+    "X0 = 0.2\n",
+    "Y0 = 1e-4\n",
+    "Z0 = N0 - X0 - Y0\n",
     "INPUT = (X0, Y0, Z0)\n",
     "\n",
-    "def diff_eqs(INP,t):  \n",
-    "\t'''The main set of equations'''\n",
-    "\tY=np.zeros((3))\n",
-    "\tV = INP    \n",
-    "\tY[0] = mu - beta * V[0] * V[1] - mu * V[0]\n",
-    "\tY[1] = beta * V[0] * V[1] - (gamma + mu) * V[1]/(1-rho)\n",
-    "\tY[2] = gamma * V[1] - mu * V[2]\n",
-    "\treturn Y   # For odeint\n",
+    "\n",
+    "def diff_eqs(INP, t):\n",
+    "    \"\"\"The main set of equations\"\"\"\n",
+    "    Y = np.zeros((3))\n",
+    "    V = INP\n",
+    "    Y[0] = mu - beta * V[0] * V[1] - mu * V[0]\n",
+    "    Y[1] = beta * V[0] * V[1] - (gamma + mu) * V[1] / (1 - rho)\n",
+    "    Y[2] = gamma * V[1] - mu * V[2]\n",
+    "    return Y  # For odeint\n",
     "\n",
     "\n",
+    "t_start = 0.0\n",
+    "t_end = ND\n",
+    "t_inc = TS\n",
+    "t_range = np.arange(t_start, t_end + t_inc, t_inc)\n",
+    "RES = spi.odeint(diff_eqs, INPUT, t_range)\n",
     "\n",
-    "t_start = 0.0; t_end = ND; t_inc = TS\n",
-    "t_range = np.arange(t_start, t_end+t_inc, t_inc)\n",
-    "RES = spi.odeint(diff_eqs,INPUT,t_range)\n",
-    "\n",
-    "#Ploting\n",
+    "# Ploting\n",
     "pl.subplot(311)\n",
-    "pl.plot(RES[:,0], '-g', label='Susceptibles')\n",
-    "pl.title('Program_2_3.py')\n",
-    "pl.xlabel('Time')\n",
-    "pl.ylabel('Susceptibles')\n",
+    "pl.plot(RES[:, 0], \"-g\", label=\"Susceptibles\")\n",
+    "pl.title(\"Program_2_3.py\")\n",
+    "pl.xlabel(\"Time\")\n",
+    "pl.ylabel(\"Susceptibles\")\n",
     "pl.subplot(312)\n",
-    "pl.plot(RES[:,1], '-r', label='Infectious')\n",
-    "pl.xlabel('Time')\n",
-    "pl.ylabel('Infectious')\n",
+    "pl.plot(RES[:, 1], \"-r\", label=\"Infectious\")\n",
+    "pl.xlabel(\"Time\")\n",
+    "pl.ylabel(\"Infectious\")\n",
     "pl.subplot(313)\n",
-    "pl.plot(RES[:,2], '-k', label='Recovereds')\n",
-    "pl.plot(sum((RES[:,0],RES[:,1],RES[:,2])), '--k', label='Total Population')\n",
-    "pl.xlabel('Time')\n",
+    "pl.plot(RES[:, 2], \"-k\", label=\"Recovereds\")\n",
+    "pl.plot(sum((RES[:, 0], RES[:, 1], RES[:, 2])), \"--k\", label=\"Total Population\")\n",
+    "pl.xlabel(\"Time\")\n",
     "pl.legend(loc=0)\n",
-    "pl.ylabel('Recovereds\\nTotal Population')\n",
+    "pl.ylabel(\"Recovereds\\nTotal Population\")\n",
     "pl.show()"
    ]
   },
@@ -165,50 +169,52 @@
     }
    ],
    "source": [
-    "mu=1/(70*365.0)\n",
-    "beta=520/365.0\n",
-    "sigma=1/14.0\n",
-    "gamma=1/7.0\n",
-    "ND=60*365.0\n",
-    "TS=1.0\n",
-    "S0=0.1\n",
-    "E0=1e-4\n",
-    "I0=1e-4\n",
+    "mu = 1 / (70 * 365.0)\n",
+    "beta = 520 / 365.0\n",
+    "sigma = 1 / 14.0\n",
+    "gamma = 1 / 7.0\n",
+    "ND = 60 * 365.0\n",
+    "TS = 1.0\n",
+    "S0 = 0.1\n",
+    "E0 = 1e-4\n",
+    "I0 = 1e-4\n",
     "INPUT = (S0, E0, I0)\n",
     "\n",
-    "def diff_eqs(INP,t):  \n",
-    "\t'''The main set of equations'''\n",
-    "\tY=np.zeros((3))\n",
-    "\tV = INP    \n",
-    "\tY[0] = mu - beta * V[0] * V[2] - mu * V[0]\n",
-    "\tY[1] = beta * V[0] * V[2] - sigma * V[1] - mu * V[1]\n",
-    "\tY[2] = sigma * V[1] - gamma * V[2] - mu * V[2]\n",
-    "\treturn Y   # For odeint\n",
+    "\n",
+    "def diff_eqs(INP, t):\n",
+    "    \"\"\"The main set of equations\"\"\"\n",
+    "    Y = np.zeros((3))\n",
+    "    V = INP\n",
+    "    Y[0] = mu - beta * V[0] * V[2] - mu * V[0]\n",
+    "    Y[1] = beta * V[0] * V[2] - sigma * V[1] - mu * V[1]\n",
+    "    Y[2] = sigma * V[1] - gamma * V[2] - mu * V[2]\n",
+    "    return Y  # For odeint\n",
     "\n",
     "\n",
+    "t_start = 0.0\n",
+    "t_end = ND\n",
+    "t_inc = TS\n",
+    "t_range = np.arange(t_start, t_end + t_inc, t_inc)\n",
+    "RES = spi.odeint(diff_eqs, INPUT, t_range)\n",
     "\n",
-    "t_start = 0.0; t_end = ND; t_inc = TS\n",
-    "t_range = np.arange(t_start, t_end+t_inc, t_inc)\n",
-    "RES = spi.odeint(diff_eqs,INPUT,t_range)\n",
+    "Rec = 1.0 - (RES[:, 0] + RES[:, 1] + RES[:, 2])\n",
     "\n",
-    "Rec=1. - (RES[:,0]+RES[:,1]+RES[:,2])\n",
-    "\n",
-    "#Ploting\n",
+    "# Ploting\n",
     "pl.subplot(311)\n",
-    "pl.plot(RES[:,0], '-g', label='Susceptibles')\n",
-    "pl.title('Program_2_6.py')\n",
-    "pl.xlabel('Time')\n",
-    "pl.ylabel('Susceptibles')\n",
+    "pl.plot(RES[:, 0], \"-g\", label=\"Susceptibles\")\n",
+    "pl.title(\"Program_2_6.py\")\n",
+    "pl.xlabel(\"Time\")\n",
+    "pl.ylabel(\"Susceptibles\")\n",
     "pl.subplot(312)\n",
-    "pl.plot(RES[:,1], '-m', label='Exposed')\n",
-    "pl.plot(RES[:,2], '-r', label='Infectious')\n",
+    "pl.plot(RES[:, 1], \"-m\", label=\"Exposed\")\n",
+    "pl.plot(RES[:, 2], \"-r\", label=\"Infectious\")\n",
     "pl.legend(loc=0)\n",
-    "pl.xlabel('Time')\n",
-    "pl.ylabel('Infected')\n",
+    "pl.xlabel(\"Time\")\n",
+    "pl.ylabel(\"Infected\")\n",
     "pl.subplot(313)\n",
-    "pl.plot(Rec, '-k', label='Recovereds')\n",
-    "pl.xlabel('Time')\n",
-    "pl.ylabel('Recovereds')\n",
+    "pl.plot(Rec, \"-k\", label=\"Recovereds\")\n",
+    "pl.xlabel(\"Time\")\n",
+    "pl.ylabel(\"Recovereds\")\n",
     "pl.show()"
    ]
   },
@@ -229,85 +235,91 @@
     }
    ],
    "source": [
-    "beta0=17/13.0;\n",
-    "beta1=([0.1]);\n",
-    "gamma=1/13.0;\n",
-    "mu=1/(50*365.0);\n",
-    "S0=1/17.0;\n",
-    "I0=1e-4;\n",
-    "ND=MaxTime=60*365.0;\n",
-    "TS=1.0\n",
+    "beta0 = 17 / 13.0\n",
+    "beta1 = [0.1]\n",
+    "gamma = 1 / 13.0\n",
+    "mu = 1 / (50 * 365.0)\n",
+    "S0 = 1 / 17.0\n",
+    "I0 = 1e-4\n",
+    "ND = MaxTime = 60 * 365.0\n",
+    "TS = 1.0\n",
     "\n",
     "\n",
     "### This code can also be used to generate bifurcation diagrams, by setting\n",
     "### beta1 equal to a vector of seasonality rates. The bifurcation diagram is\n",
     "### constructed using extrapolated initial conditions. Try:\n",
-    "#(beta0,beta1,gamma,mu,S0,I0,ND)=(17/13.,np.arange(0.001,0.251,0.001),1/13.,1./(50*365),1/17.,1e-4,20*365)\n",
+    "# (beta0,beta1,gamma,mu,S0,I0,ND)=(17/13.,np.arange(0.001,0.251,0.001),1/13.,1./(50*365),1/17.,1e-4,20*365)\n",
     "\n",
-    "INPUT=np.array((S0,I0, 1-S0-I0))\n",
+    "INPUT = np.array((S0, I0, 1 - S0 - I0))\n",
     "\n",
-    "def diff_eqs(INP,t):  \n",
-    "\t'''The main set of equations'''\n",
-    "\tY=np.zeros((3))\n",
-    "\tV = INP   \n",
-    "\tbeta=beta0*(1+beta1*np.sin(2*np.pi*t/365))\n",
-    "\tY[0] = mu - beta*V[0]*V[1] - mu*V[0]\n",
-    "\tY[1] = beta*V[0]*V[1] - mu*V[1] - gamma*V[1]\n",
-    "\tY[2] = gamma * V[1] - mu * V[2]\n",
-    "\treturn Y   # For odeint\n",
     "\n",
-    "if len(beta1)==1:\n",
-    "\tbeta1=beta1[0]\n",
-    "\tt_start = 0.0; t_end = ND; t_inc = TS\n",
-    "\tt_range = np.arange(t_start, t_end+t_inc, t_inc)\n",
-    "\tRES = spi.odeint(diff_eqs,INPUT,t_range)\n",
-    "\t\n",
-    "\tt=(np.arange(ND)/365.)\n",
-    "\t#Ploting\n",
-    "\tpl.subplot(311)\n",
-    "\tpl.plot(t,RES[1:,0], 'g', label='S')\n",
-    "\tpl.xlabel ('Time (years)')\n",
-    "\tpl.ylabel ('Susceptibles')\n",
-    "\tpl.subplot(312)\n",
-    "\tpl.plot(t,RES[1:,1], 'r', label='I')\n",
-    "\tpl.xlabel ('Time (years)')\n",
-    "\tpl.ylabel ('Infectious')\n",
-    "\tpl.subplot(313)\n",
-    "\tpl.plot(t,1-(RES[1:,0]+RES[1:,1]), 'k', label='R')\n",
-    "\tpl.xlabel ('Time (years)')\n",
-    "\tpl.ylabel ('Recovereds')\n",
+    "def diff_eqs(INP, t):\n",
+    "    \"\"\"The main set of equations\"\"\"\n",
+    "    Y = np.zeros((3))\n",
+    "    V = INP\n",
+    "    beta = beta0 * (1 + beta1 * np.sin(2 * np.pi * t / 365))\n",
+    "    Y[0] = mu - beta * V[0] * V[1] - mu * V[0]\n",
+    "    Y[1] = beta * V[0] * V[1] - mu * V[1] - gamma * V[1]\n",
+    "    Y[2] = gamma * V[1] - mu * V[2]\n",
+    "    return Y  # For odeint\n",
+    "\n",
+    "\n",
+    "if len(beta1) == 1:\n",
+    "    beta1 = beta1[0]\n",
+    "    t_start = 0.0\n",
+    "    t_end = ND\n",
+    "    t_inc = TS\n",
+    "    t_range = np.arange(t_start, t_end + t_inc, t_inc)\n",
+    "    RES = spi.odeint(diff_eqs, INPUT, t_range)\n",
+    "\n",
+    "    t = np.arange(ND) / 365.0\n",
+    "    # Ploting\n",
+    "    pl.subplot(311)\n",
+    "    pl.plot(t, RES[1:, 0], \"g\", label=\"S\")\n",
+    "    pl.xlabel(\"Time (years)\")\n",
+    "    pl.ylabel(\"Susceptibles\")\n",
+    "    pl.subplot(312)\n",
+    "    pl.plot(t, RES[1:, 1], \"r\", label=\"I\")\n",
+    "    pl.xlabel(\"Time (years)\")\n",
+    "    pl.ylabel(\"Infectious\")\n",
+    "    pl.subplot(313)\n",
+    "    pl.plot(t, 1 - (RES[1:, 0] + RES[1:, 1]), \"k\", label=\"R\")\n",
+    "    pl.xlabel(\"Time (years)\")\n",
+    "    pl.ylabel(\"Recovereds\")\n",
     "\n",
     "else:\n",
-    "\tpl.ion()\n",
-    "\tif ND < 3650:\n",
-    "\t\tND = 3650\n",
-    "\tbeta2=beta1\n",
-    "\tBifur_I=np.zeros((len(beta2),10))\n",
-    "\tfor i in range(len(beta2)):\n",
-    "\t\tbeta1 = beta2[i]\n",
+    "    pl.ion()\n",
+    "    if ND < 3650:\n",
+    "        ND = 3650\n",
+    "    beta2 = beta1\n",
+    "    Bifur_I = np.zeros((len(beta2), 10))\n",
+    "    for i in range(len(beta2)):\n",
+    "        beta1 = beta2[i]\n",
     "\n",
-    "\t\tt_start = 0.0; t_end = ND; t_inc = TS\n",
-    "\t\tt_range = np.arange(t_start, t_end+t_inc, t_inc)\n",
-    "\t\tRES = spi.odeint(diff_eqs,INPUT,t_range)\n",
-    "\t\tINPUT=RES[-1]\n",
+    "        t_start = 0.0\n",
+    "        t_end = ND\n",
+    "        t_inc = TS\n",
+    "        t_range = np.arange(t_start, t_end + t_inc, t_inc)\n",
+    "        RES = spi.odeint(diff_eqs, INPUT, t_range)\n",
+    "        INPUT = RES[-1]\n",
     "\n",
-    "\t\tfor j in range(10):\n",
-    "\t\t\tBifur_I[i,j]=RES[np.arange(ND)[((ND-j*365.)-1)],1]\n",
-    "\t\t\t\n",
-    "\t\t### Producing the plot step by step but it is slow\n",
-    "\t\t### Prefer to make a video as shown in spatial models\n",
-    "#\t\tif i > 1:\n",
-    "#\t\t\tpl.semilogy (beta2, Bifur_I, '.k')\n",
-    "#\t\t\tpl.xlabel (r'Seasonality, $\\beta_1$')\n",
-    "#\t\t\tpl.ylabel (r'Level of Infection')\n",
-    "\tpl.ioff()\n",
-    "\tpl.semilogy (beta2, (Bifur_I), '.k')\n",
-    "\t### if TeX commands do not work comment comment the next line\n",
-    "\tpl.xlabel (r'Seasonality, $\\beta_1$')\n",
-    "\tpl.ylabel (r'Level of Infection')\n",
-    "\t### if TeX commands do not work comment uncomment the next line\n",
-    "#\tpl.xlabel ('Seasonality, beta1')\n",
-    "#\tpl.ylabel ('Level of Infection (log_10)')\n",
+    "        for j in range(10):\n",
+    "            Bifur_I[i, j] = RES[np.arange(ND)[((ND - j * 365.0) - 1)], 1]\n",
+    "\n",
+    "        ### Producing the plot step by step but it is slow\n",
+    "        ### Prefer to make a video as shown in spatial models\n",
+    "    # \t\tif i > 1:\n",
+    "    # \t\t\tpl.semilogy (beta2, Bifur_I, '.k')\n",
+    "    # \t\t\tpl.xlabel (r'Seasonality, $\\beta_1$')\n",
+    "    # \t\t\tpl.ylabel (r'Level of Infection')\n",
+    "    pl.ioff()\n",
+    "    pl.semilogy(beta2, (Bifur_I), \".k\")\n",
+    "    ### if TeX commands do not work comment comment the next line\n",
+    "    pl.xlabel(r\"Seasonality, $\\beta_1$\")\n",
+    "    pl.ylabel(r\"Level of Infection\")\n",
+    "    ### if TeX commands do not work comment uncomment the next line\n",
+    "# \tpl.xlabel ('Seasonality, beta1')\n",
+    "# \tpl.ylabel ('Level of Infection (log_10)')\n",
     "pl.show()"
    ]
   },
