class skeleton for network sims

--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -795,23 +795,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Spatial Models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import networkx as nx\n",
-    "import ndlib"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -1091,6 +1074,134 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spatial Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ndlib.models.ModelConfig as mc\n",
+    "import ndlib.models.epidemics as ep\n",
+    "from __future__ import annotations\n",
+    "from typing import Dict, List, Tuple, Optional\n",
+    "import networkx as nx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NetworkSimulator:\n",
+    "    def __init__(self, seed: int = 42):\n",
+    "        self.seed = seed\n",
+    "        self.rng = np.random.default_rng(seed)\n",
+    "        self.network_types: List[str] = ['erdos_renyi', 'barabasi_albert', 'watts_strogatz']\n",
+    "        self.networks: Dict[str, List[nx.Graph]] = {}\n",
+    "        self.experiment_results: Optional[pd.DataFrame] = None\n",
+    "        \n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def _set_mean_degree(n_nodes: int, target_k: float) -> Tuple[float, int, int]:\n",
+    "        \"\"\"\n",
+    "        Given n and desired mean degree <k>, return:\n",
+    "          ER: p\n",
+    "          BA: m\n",
+    "          WS: k_even\n",
+    "        \"\"\"\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _spectral_radius(G: nx.Graph) -> float:\n",
+    "        \"\"\"\n",
+    "        Largest eigenvalue of adjacency (for network-aware threshold).\n",
+    "        \"\"\"\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    # Networks\n",
+    "    \n",
+    "    def generate_networks(\n",
+    "        self, \n",
+    "        n_nodes: int = 100,\n",
+    "        n_instances: int = 5, \n",
+    "        target_k: float = 6.0, \n",
+    "        ws_p: float = 0.3\n",
+    "        ) -> Dict[str, List[nx.Graph]]:\n",
+    "        \"\"\"\n",
+    "        Generate and store networks of each type with given parameters.\n",
+    "        \"\"\"\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    def compute_network_stats(self, G: nx.Graph) -> Dict[str, float]:\n",
+    "        \"\"\"\n",
+    "        Compute and return basic network statistics.\n",
+    "        \"\"\"\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def visualize_network_stats(self)-> None:\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    # Simulations\n",
+    "    \n",
+    "    def run_sir_simulation(\n",
+    "        self,\n",
+    "        G: nx.Graph,\n",
+    "        beta: float = 0.5,\n",
+    "        gamma: float = 0.1,\n",
+    "        fraction_infected: float = 0.05,\n",
+    "        iterations: int = 200,\n",
+    "        seed: Optional[int] = None,\n",
+    "    ) -> Dict[str, object]:\n",
+    "        \"\"\"\n",
+    "        Run SIR simulation on given network and return results.\n",
+    "        \"\"\"\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    def experiment_parameter_sweep(\n",
+    "        self,\n",
+    "        n_repetitions: int = 10,\n",
+    "        beta_values: Optional[List[float]] = None,\n",
+    "        gamma_values: Optional[List[float]] = None,\n",
+    "    ) -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Sweep (beta, gamma) across network types and replicate.\n",
+    "        Store results in self.experiment_results and return a DataFrame.\n",
+    "        \"\"\"\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def visualize_experiment_results(self) -> None:\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    def experiment_initial_conditions(\n",
+    "        self,\n",
+    "        bet: float = 0.5,\n",
+    "        gamma: float = 0.1,\n",
+    "        iterations: int = 200,\n",
+    "        fractions: List[float] = [0.01, 0.05, 0.1],\n",
+    "    ) -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Compare seeding strategies: random, high-degree, low-degree, clustered.\n",
+    "        \"\"\" \n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    def _infect_random(self, G: nx.Graph, fraction: float) ->set:\n",
+    "        raise NotImplementedError\n",
+    "    def _infeect_high_degree(self, G: nx.Graph, fraction: float) -> set:\n",
+    "        raise NotImplementedError\n",
+    "    def _infect_low_degree(self, G: nx.Graph, fraction: float) -> set:\n",
+    "        raise NotImplementedError\n",
+    "    def _infect_clustered(self, G: nx.Graph, fraction: float) -> set:\n",
+    "        raise NotImplementedError"
    ]
   }
  ],
