vaccination strategy pseudo added

--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,12 +1206,13 @@
     "from typing import Dict, List, Tuple, Optional\n",
     "import networkx as nx\n",
     "from ndlib.viz.mpl.DiffusionTrend import DiffusionTrend\n",
-    "from ndlib.viz.mpl.DiffusionPrevalence import DiffusionPrevalence"
+    "from ndlib.viz.mpl.DiffusionPrevalence import DiffusionPrevalence\n",
+    "from matplotlib.animation import FuncAnimation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1894,12 +1895,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plotting class\n",
-    "\n",
     "\n",
     "class Plotter:\n",
     "\n",
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -2581,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -2606,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -2655,28 +2655,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_nodes : 354\n",
-      "n_edges : 1263\n",
-      "avg_degree : 7.135593220338983\n",
-      "std_degree : 6.446978779440251\n",
-      "min_degree : 1.0\n",
-      "max_degree : 47.0\n",
-      "density : 0.020214145100110433\n",
-      "avg_clustering : 0.3127075569221226\n",
-      "transitivity : 0.22441414007679067\n",
-      "avg_path_length : 3.3638065972055506\n",
-      "diameter : 9\n",
-      "second_moment_k2 : 92.48022598870057\n",
+      "n_nodes                : 354\n",
+      "n_edges                : 1263\n",
+      "avg_degree             : 7.135593220338983\n",
+      "std_degree             : 6.446978779440251\n",
+      "min_degree             : 1.0\n",
+      "max_degree             : 47.0\n",
+      "density                : 0.020214145100110433\n",
+      "avg_clustering         : 0.3127075569221226\n",
+      "transitivity           : 0.22441414007679067\n",
+      "avg_path_length        : 3.3638065972055506\n",
+      "diameter               : 9\n",
+      "second_moment_k2       : 92.48022598870057\n",
       "tau_c_mean_over_second : 0.07715804264157859\n",
-      "degree_heterogeneity : 5.82481849779245\n",
-      "avg_betweenness : 0.006950811228431626\n"
+      "degree_heterogeneity   : 5.82481849779245\n",
+      "avg_betweenness        : 0.006950811228431626\n"
      ]
     }
    ],
@@ -2718,7 +2718,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vaccination Strategy"
+    "### Backrgound: Network Classification\n",
+    "\n",
+    "1. Spatial Heterogeneity: Diferences between populations or individuals at different geographical locations. One form of hetereogeneity describes observed differences in population structures arising from dyanmical processes, such as stochasticity, or differences in movement between populations (Hassel et al. 1991)\n",
+    "\n",
+    "2. Traveling Waves: To quantify traveling wave type of heterogeneities we need to used lagged correlations.\n",
+    "\n",
+    "3. Interaction: Movement of hosts between populations with the associated risk of disease tarnsmission can couple dynamics.\n",
+    "\n",
+    "4. Spatial correlation of infection + degree of heterogeneity: mix of local ring and targeted vaccination outperforms random control (small world approximation)\n",
+    "\n",
+    "5. Small World Networks: based upon a lattice structire, with a small number of long range connections. Locally, small world networks look like lattices; they are highly clustered and have litle heterogeneity in the number of neighbors. Transmission of infection is localized so that the strong stauration effects and wavelike spread observed in lattice models will still occur. However, the presence of a few long distance connctions provides shortcuts across the network, which reduces the average path length and allows a spreading of infection to jumop to new susceptible areas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Requirements:\n",
+    "\n",
+    "1. Dynamic vaccination strategy with a testing budget and a limited number of vaccinations available per iteration of the model.\n",
+    "\n",
+    "2. Maximum number of tests per iteration of the model, but can use less\n",
+    "\n",
+    "3. Assume network structure is known, but the infection status of an individual is only known after a test.\n",
+    "\n",
+    "4. Vaccinations applied to the S class move them immediately to the removed class\n",
+    "\n",
+    "5. No waning immunity\n",
+    "\n",
+    "6. Compare the strategies with different budgets of (1, 3, 5, and 10) per timestep and different testing accuracy (0.5, 0.75, 1.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vaccination Strategy Ideas\n",
+    "\n",
+    "https://arxiv.org/pdf/nlin/0108013\n",
+    "\n",
+    "https://www.worldscientific.com/doi/abs/10.1142/S0129183102003048\n",
+    "\n",
+    "https://pmc.ncbi.nlm.nih.gov/articles/PMC8426151/\n",
+    "\n",
+    "Ring (local) vacciantiona and contact tracing: When infection is spatially localized, vaccinating or isolating neighbors of detected cases is highly effective. \n",
+    "\n",
+    "Targeted Vaccination: For heterogenous (network) contacts, vaccinating high degre or high-risk individuals lowers R0 comapred to random vaccination. \n",
+    "\n",
+    "Small world structure: Epidemics advance as wave fronts on clustered lattices; a few long range links allow rapud global spread. This motivates combining local containment with occasional global interventions\n",
+    "\n",
+    "Testing/detection limits: We have finite survelleince capacity (budget and accuracy)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2729,7 +2781,138 @@
    "source": [
     "# Apply a vaccination strategy for a small-world heterogeneous network.\n",
     "\n",
-    "#FIXME: Insert pseudocode for vaccination strategy here."
+    "\"\"\"\n",
+    "\n",
+    "Idea:\n",
+    "\n",
+    "1. Test where infection is most likely (around observed cases and higher degree nodes)\n",
+    "2. Vaccinate tested susceptible neighbors of observed infecteds first (ring)\n",
+    "3. Use remaining doses to do acquintence/hib targeting (break long bridges)\n",
+    " \n",
+    "INPUT:\n",
+    "    G = V(, E) # contact network\n",
+    "    beta, gamma # SIR params\n",
+    "    B from (1, 3, 5, 10) # max tests per timestep\n",
+    "    V from (1, 3, 5, 10) # max vaccines per timestep\n",
+    "    a from (0.5, 0.75, 1.0) # test accuracy for vaccination\n",
+    "    T_max # max timesteps safeguard\n",
+    "    a, b_w, gamma_w # weights for scoring function\n",
+    "    \n",
+    "STATE:\n",
+    "    true_status[u] ∈ {S,I,R}  \n",
+    "    obs_status[u]  ∈ {UNK,S,I,R}\n",
+    "    I0 = random set of 5 nodes #always start with 5 infected nodes\n",
+    "    \n",
+    "LOG:\n",
+    "    record curves of S(t), I(t), R(t), peak, final size, etc.\n",
+    "    \n",
+    "FUNCTIONS:\n",
+    "  neigh(u)           # neighbors of u in G\n",
+    "  deg(u)             # degree of u\n",
+    "  two_hop_to_I(u)    # count of length-2 paths from u to any node with obs_status=I\n",
+    "     \n",
+    "TEST(u):\n",
+    "      # returns lab_result ∈ {S,I} with correctness prob a\n",
+    "      if random() < a: return true_status[u]\n",
+    "      else:            return opposite(true_status[u])  # flip S↔I; R assumed rarely tested\n",
+    "      \n",
+    "VACCINATE(u):\n",
+    "      true_status[u] = R ; obs_status[u] = R\n",
+    "      \n",
+    "ADVANCE_EPIDEMIC():\n",
+    "      # one iteration of SIR on true_status with parameters (beta,gamma)\n",
+    "      \n",
+    "      \n",
+    "INPUT:\n",
+    "  G = (V,E)               # known contact network (unweighted)\n",
+    "  beta, gamma             # SIR parameters (R0 = beta/gamma)\n",
+    "  B ∈ {1,3,5,10}          # max tests per timestep\n",
+    "  V ∈ {1,3,5,10}          # max vaccinations per timestep (often V = B)\n",
+    "  a ∈ {0.5,0.75,1.0}      # test accuracy (probability of correct result)\n",
+    "  T_max                   # max timesteps safeguard\n",
+    "  α, βw, γw               # risk-score weights; default α=1.0, βw=0.25, γw=0.1\n",
+    "\n",
+    "STATE:\n",
+    "  true_status[u] ∈ {S,I,R}      # used by epidemic engine (NDlib-like)\n",
+    "  obs_status[u]  ∈ {UNK,S,I,R}  # controller’s belief; UNK initially unless seeded I/R\n",
+    "  I0 = random set of 5 nodes     # initial infections: set true_status=I; obs_status=UNK\n",
+    "\n",
+    "LOG:\n",
+    "  record curves of S(t), I(t), R(t), peak, final size, etc.\n",
+    "\n",
+    "FUNCTIONS:\n",
+    "  neigh(u)           # neighbors of u in G\n",
+    "  deg(u)             # degree of u\n",
+    "  two_hop_to_I(u)    # count of length-2 paths from u to any node with obs_status=I\n",
+    "  TEST(u):\n",
+    "      # returns lab_result ∈ {S,I} with correctness prob a\n",
+    "      if random() < a: return true_status[u]\n",
+    "      else:            return opposite(true_status[u])  # flip S↔I; R assumed rarely tested\n",
+    "  VACCINATE(u):\n",
+    "      true_status[u] = R ; obs_status[u] = R\n",
+    "  ADVANCE_EPIDEMIC():\n",
+    "      # one iteration of SIR on true_status with parameters (beta,gamma)\n",
+    "      \n",
+    "      \n",
+    "########################################################################################\n",
+    "\n",
+    "ALGORITHM:\n",
+    "  t = 0\n",
+    "  while t < T_max and ∃ u: true_status[u] == I:\n",
+    "\n",
+    "      # TEST SELECTION\n",
+    "      # risk score for unremoved nodes\n",
+    "      for each u with obs_status[u] ≠ R:\n",
+    "          nI  = |{v ∈ neigh(u): obs_status[v] == I}|\n",
+    "          k   = deg(u)\n",
+    "          h2  = two_hop_to_I(u)         # optional; can be cached\n",
+    "          score[u] = α*nI + βw*k + γw*h2\n",
+    "\n",
+    "      # choose up to B highest-score nodes to test (skip already R)\n",
+    "      Tset = top_B_nodes_by(score, exclude = {u: obs_status[u] == R})\n",
+    "\n",
+    "      # perform tests; update observed statuses only\n",
+    "      for u in Tset:\n",
+    "          if obs_status[u] != R:\n",
+    "              lab = TEST(u)\n",
+    "              if lab == I: obs_status[u] = I\n",
+    "              else:        obs_status[u] = S\n",
+    "\n",
+    "      # VACCINATION\n",
+    "      vaccines_left = V\n",
+    "\n",
+    "      # 2a) RING: tested-S neighbors of observed infecteds, highest degree first\n",
+    "      RingCandidates = { v :\n",
+    "           obs_status[v] in {S}  AND\n",
+    "           ∃ w ∈ neigh(v) with obs_status[w] == I }\n",
+    "      RingSorted = sort_descending_by_degree(RingCandidates)\n",
+    "      for v in RingSorted:\n",
+    "          if vaccines_left == 0: break\n",
+    "          VACCINATE(v)\n",
+    "          vaccines_left -= 1\n",
+    "\n",
+    "      # ACQUAINTANCE: target hubs indirectly if doses remain\n",
+    "      while vaccines_left > 0:\n",
+    "          x = random node with obs_status[x] ≠ R\n",
+    "          N = {y ∈ neigh(x) : obs_status[y] ≠ R}\n",
+    "          if N is empty: continue\n",
+    "          y = random choice from N                     # biases to higher degree\n",
+    "          VACCINATE(y)\n",
+    "          vaccines_left -= 1\n",
+    "\n",
+    "      # EPIDEMIC UPDATE\n",
+    "      ADVANCE_EPIDEMIC()                              # updates true_status\n",
+    "      # optional: if you observe symptomatic I automatically, set obs_status=I for those\n",
+    "\n",
+    "      # LOG METRICS\n",
+    "      update S(t), I(t), R(t), peak, etc.\n",
+    "\n",
+    "      t += 1\n",
+    "\n",
+    "OUTPUT:\n",
+    "  peak_infected_frac, time_to_peak, final_size_frac, duration, resource usage\n",
+    "\n",
+    "\"\"\""
    ]
   }
  ],
